fix(ui) aligned heading to center

--- a/src/app/+previous-matches/previous-match/previous-match.component.scss
+++ b/src/app/+previous-matches/previous-match/previous-match.component.scss
@@ -53,3 +53,7 @@
 .inactive {
   opacity: .5;
 }
+
+h2 {
+  text-align: center;
+}
